--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -2,10 +2,12 @@ body {
   background-color: #3d3d3d;
   font-family: Futura;
   color:white;}
-h1{}
+h1{color:orange;
+  text-align: center;
+  }
 h2{}
 h3{}
-h4{}
+h4{text-align: center;}
 h5{}
 h6{}
 video{}
@@ -15,3 +17,4 @@ a:hover{}
 a:active{}
 p{}
 li{}
+hr{}
