--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,20 +1,120 @@
-body {
-  background-color: #3d3d3d;
-  font-family: Futura;
-  color:white;}
-h1{color:orange;
+body{
   text-align: center;
-  }
+  font-family: tahoma;
+  color: white;
+  background-color: black;
+}
+
+h1{
+  font-size: 6vmin;
+}
 h2{}
-h3{}
-h4{text-align: center;}
+h3{
+  font-size: 2.5vmin;
+}
+h4{}
 h5{}
 h6{}
-video{}
-a:active{}
-a:visited{}
-a:hover{}
-a:active{}
-p{}
-li{}
-hr{}
+
+p{
+  font-size: 2.4vmin;
+}
+
+header{
+  position: fixed;
+  width: 98.7%;
+  border-radius: 10px;
+  background-color: darkred;
+}
+
+nav{
+  position: fixed;
+  margin-top: 27.5vh;
+  color: white;
+  text-align: center;
+  height: 100%;
+  width: 15%;
+  vertical-align: middle;
+}
+
+nav>ul{
+  list-style-type: none;
+  display: inline;
+  margin:0;
+  padding:0;
+  vertical-align: middle;
+  font-size: 3vmin
+}
+
+nav>ul>li{
+  border-radius: 10px;
+  margin-bottom: 15%;
+  width: 100%;
+  height: 6%;
+  vertical-align: middle;
+}
+
+nav>ul>li:last-child{
+  height: 13%;
+}
+
+nav>ul>li:last-child a{
+  padding-top: 19%;
+}
+
+nav>ul>li a:hover:not(.active){
+  background-color: darkorange;
+  margin-right:-6%;
+}
+
+nav>ul>li a{
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  color: white;
+  height: 100%;
+  padding-top: 10%;
+  background-color: darkred;
+  border-radius: 10px;
+  vertical-align: middle;
+}
+
+a.active{
+  background-color: darkpurple;
+}
+
+aside{
+  margin-left: 83.7%;
+  position: fixed;
+  margin-top: 27.5vh;
+  color: white;
+  text-align: center;
+  height: 70vh;
+  width: 15%;
+  background-color: darkred;
+  border-radius: 10px;
+  font-size: 3vmin;
+}
+
+section{
+  position:fixed;
+  text-align: left;
+  margin-left: 16%;
+  margin-top: 27.5vh;
+  background-color: lightblack;
+  width: 64.6%;
+  padding-left: 1%;
+  padding-right: 1%;
+  height: 70vh;
+  overflow-y: scroll;
+  border-radius: 10px;
+}
+
+footer{
+  text-align: center;
+  background-color: black;
+  margin-left: -2%;
+  width: 100%;
+  padding: 2%;
+  font-size: 2vmin;
+}
