--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -59,7 +59,7 @@ nav>ul>li:last-child{
 }
 
 nav>ul>li:last-child a{
-  padding-top: 19%;
+  padding-top: 6vh;
 }
 
 nav>ul>li a:hover:not(.active){
