--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -48,14 +48,14 @@ nav>ul{
 
 nav>ul>li{
   border-radius: 10px;
-  margin-bottom: 15%;
+  margin-bottom: 4.2vh;
   width: 100%;
-  height: 6%;
+  height: 6vh;
   vertical-align: middle;
 }
 
 nav>ul>li:last-child{
-  height: 13%;
+  height: 13vh;
 }
 
 nav>ul>li:last-child a{
